--- a/Podcast/Base.lproj/Main.storyboard
+++ b/Podcast/Base.lproj/Main.storyboard
@@ -15,15 +15,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="2s9-kx-ZXE">
-                                <rect key="frame" x="0.0" y="88" width="414" height="56"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9Xv-Zq-vRr">
-                                <rect key="frame" x="0.0" y="144" width="414" height="752"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="favoritePodcastCell" rowHeight="74" id="Arh-Vp-4Ab" customClass="FavoritePodcastCellTableViewCell" customModule="Podcast" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="podcastCell" rowHeight="74" id="Arh-Vp-4Ab" customClass="PodcastTableViewCell" customModule="Podcast" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="74"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Arh-Vp-4Ab" id="L3S-nS-xek" customClass="FavoritePodcastCellTableViewCell" customModule="Podcast" customModuleProvider="target">
@@ -60,27 +56,23 @@
                                                 <constraint firstItem="bBu-tC-wgm" firstAttribute="width" secondItem="L3S-nS-xek" secondAttribute="width" multiplier="0.149758" id="olH-yS-uXX"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="favoriteNameLabel" destination="uFO-zk-QOe" id="ia2-XO-CIU"/>
-                                            <outlet property="favoritePodcastLabel" destination="bBu-tC-wgm" id="pmx-uJ-Fy9"/>
-                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="2s9-kx-ZXE" firstAttribute="top" secondItem="8oI-rD-LBW" secondAttribute="top" id="0cr-S0-HpE"/>
-                            <constraint firstItem="9Xv-Zq-vRr" firstAttribute="top" secondItem="2s9-kx-ZXE" secondAttribute="bottom" id="Wlg-jK-4Dl"/>
-                            <constraint firstItem="2s9-kx-ZXE" firstAttribute="leading" secondItem="8oI-rD-LBW" secondAttribute="leading" id="a6F-mV-IWU"/>
-                            <constraint firstItem="2s9-kx-ZXE" firstAttribute="trailing" secondItem="8oI-rD-LBW" secondAttribute="trailing" id="a9B-ES-8GB"/>
-                            <constraint firstItem="9Xv-Zq-vRr" firstAttribute="leading" secondItem="8oI-rD-LBW" secondAttribute="leading" id="hFV-mx-IMa"/>
-                            <constraint firstItem="9Xv-Zq-vRr" firstAttribute="trailing" secondItem="8oI-rD-LBW" secondAttribute="trailing" id="noh-21-E6l"/>
-                            <constraint firstAttribute="bottom" secondItem="9Xv-Zq-vRr" secondAttribute="bottom" id="wb1-Ra-RLQ"/>
+                            <constraint firstItem="9Xv-Zq-vRr" firstAttribute="trailing" secondItem="8oI-rD-LBW" secondAttribute="trailing" id="Eu0-s0-shd"/>
+                            <constraint firstItem="9Xv-Zq-vRr" firstAttribute="top" secondItem="8oI-rD-LBW" secondAttribute="top" id="TRl-hx-xQq"/>
+                            <constraint firstAttribute="bottom" secondItem="9Xv-Zq-vRr" secondAttribute="bottom" id="YgO-PM-rWU"/>
+                            <constraint firstItem="9Xv-Zq-vRr" firstAttribute="leading" secondItem="8oI-rD-LBW" secondAttribute="leading" id="c6j-25-9pQ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="8oI-rD-LBW"/>
                     </view>
                     <navigationItem key="navigationItem" id="6Qp-n5-gft"/>
+                    <connections>
+                        <outlet property="favoriteTableView" destination="9Xv-Zq-vRr" id="59W-NZ-Y0K"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fpp-yv-9HW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
